BREAKING CHANGE: package and class names changed